# forecast-aisafety

./: .env.example  .gitignore  README.md  demo_llm_integration.py  main.py  package-lock.json  pyproject.toml  run_app.py
config/: database.py
data_collection/: data_loader.py
data_collection/collectors/: synthetic_data.py
database/: models.py
design-notes/: data-extract.md  data-load.md  data-transform.md  evaluation.md  forecasting.md  llm-contributions.md  visualization.md
llm_integration/: analyzer.py  config.py  forecasting_analyzer.py  safety_analyzer.py  trajectory_analyzer.py
